remove unused permission
사용되지 않는 권한 삭제함

--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
     "alarms",
     "storage",
     "cookies",
-    "notifications",
-    "tabs"
+    "notifications"
   ],
 
   "host_permissions": [
